<resources>
    <string name="app_name">MyTax</string>
    <string name="username">Username</string>
    <string name="name">Nama Usaha</string>
    <string name="jenisusaha">Jenis Usaha</string>
    <string name="kategoriusaha">Kategori Usaha</string>
    <string name="omset">Omset Per Tahun</string>
    <string name="opsional">Opsional</string>
    <string name="title_menu_usaha">USAHA</string>
    <string name="add">Tambahkan</string>
    <string name="pilih">Pilih</string>
    <string name="ubah">Ubah</string>
    <string name="next">Next</string>
    <string name="message_welcome_page">“Your Tax Management Assistant”</string>
    <string name="title_welcome_page">Welcome to</string>
    <string name="login">Login</string>
    <string name="messagelogin">Please login first before continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continueWith">Or continue with</string>
    <string name="register">Register</string>
    <string name="inputEmail">Input Email</string>
    <string name="inputPassword">Input Password</string>
    <string name="messageregister">Fill form to register new MyTax account.</string>
    <string name="calreadyanaccoun">Already have an account?</string>
    <string name="inputFullName">Input Full Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="back_icon_description">Back</string>
    <string name="layanan">Cek NPWP dan Informasi Terbaru Melalui Website Direktorat Jenderal Pajak</string>
    <string name="pendaftaran_npwp_baru">Pendaftaran NPWP Baru Melalui Website ereg.pajak.go.id</string>
    <string name="dark_mode">Tema Gelap  </string>

</resources>