<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/tvnama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tvjenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tvnama"
            card_view:layout_constraintStart_toEndOf="@+id/tvnama"
            card_view:layout_constraintStart_toStartOf="@+id/tvnama"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/jenisusaha" />

        <TextView
            android:id="@+id/tvkategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tvnama"
            card_view:layout_constraintStart_toEndOf="@+id/tvjenis"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/kategoriusaha" />

        <Button
            android:id="@+id/btnpilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:text="@string/pilih"
            />
        <Button
            android:id="@+id/btnubah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintEnd_toStartOf="@id/btnpilih"
            android:layout_marginEnd="5dp"
            android:text="@string/ubah"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>