<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregister.RegisterActivity">

    <TextView
        android:id="@+id/tittleRegister"
        android:text="@string/register"
        android:textSize="24sp"
        android:fontFamily="@font/eudoxusbold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/messageRegister"
        android:text="@string/messageregister"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tittleRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullnameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageRegister">

        <EditText
            android:id="@+id/fullnameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputFullName"
            android:fontFamily="@font/rebotoreguler"
            android:textSize="12sp"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameEditTextLayout">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputEmail"
            android:fontFamily="@font/rebotoreguler"
            android:textSize="12sp"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inputPassword"
            android:fontFamily="@font/rebotoreguler"
            android:textSize="12sp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAlreadyHaveanAccount"
        android:text="@string/calreadyanaccoun"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/loginfromregistration"
        android:text="@string/login"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="14sp"
        android:textColor="@color/darkgreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="180dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
        app:layout_constraintStart_toEndtOf="@id/tvAlreadyHaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/darkgreen"
        android:text="@string/register"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveanAccount"
        />

</androidx.constraintlayout.widget.ConstraintLayout>