<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregister.WelcomeActivity">

    <LinearLayout
        android:id="@+id/title_welcomeactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:text="@string/title_welcome_page"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:fontFamily="@font/eudoxussansmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/titleTextViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_name"
        android:textColor="@color/darkgreen"
        android:textSize="36sp"
        android:fontFamily="@font/eudoxusbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <TextView
        android:id="@+id/descTextViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/message_welcome_page"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewAppName" />



    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:text="@string/next"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="24sp"
        android:backgroundTint="@color/darkgreen"
        android:layout_marginStart="240dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcomeactivity"


        />



</androidx.constraintlayout.widget.ConstraintLayout>