<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregister.LoginActivity">

    <TextView
        android:id="@+id/tittlenameapp"
        android:text="@string/app_name"
        android:fontFamily="@font/eudoxusbold"
        android:textColor="@color/darkgreen"
        android:textSize="40sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tittleLogin"
        android:text="@string/login"
        android:textSize="24sp"
        android:fontFamily="@font/eudoxusbold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tittlenameapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/messageLogin"
        android:text="@string/messagelogin"
        android:fontFamily="@font/rebotoreguler"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tittleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btnGoogleSignIn"
        android:drawableLeft="@drawable/ic_google"
        android:backgroundTint="@color/white"
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in with Google"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageLogin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>